// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshots Button: 0 1`] = `
<button
  className="button-0-1-8"
  data-sketch-symbol="Button - secondary"
  href={null}
>
  <span
    className="button_textContainer-0-1-13"
  >
    Secondary button
  </span>
</button>
`;

exports[`button snapshots Button: 1 1`] = `
<button
  className="button-0-1-22 button_primary-0-1-23"
  data-sketch-symbol="Button - primary"
  href={null}
>
  <span
    className="button_textContainer-0-1-27"
  >
    Primary button
  </span>
</button>
`;

exports[`button snapshots Button: 2 1`] = `
<button
  className="button-0-1-36 button_outline-0-1-38"
  data-sketch-symbol="Button - outline"
  href={null}
>
  <span
    className="button_textContainer-0-1-41"
  >
    Outline button
  </span>
</button>
`;

exports[`button snapshots Button: 3 1`] = `
<button
  className="button-0-1-50 button_lightweight-0-1-53"
  data-sketch-symbol="Button - lightweight"
  href={null}
>
  <span
    className="button_textContainer-0-1-55"
  >
    Lightweight button
  </span>
</button>
`;

exports[`button snapshots Button: 4 1`] = `
<button
  className="button-0-1-64 button_justified-0-1-68"
  href={null}
>
  <span
    className="button_textContainer-0-1-69"
  >
    Justified button
  </span>
</button>
`;

exports[`button snapshots Button: 5 1`] = `
<a
  className="button-0-1-78"
  href="#"
>
  <span
    className="button_textContainer-0-1-83"
  >
    Anchor
  </span>
</a>
`;

exports[`button snapshots Button: 6 1`] = `
<a
  className="button-0-1-92"
  href="#"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<",
      }
    }
    slot="before"
  />
  <span
    className="button_textContainer-0-1-97"
  >
    Before slot only
  </span>
</a>
`;

exports[`button snapshots Button: 7 1`] = `
<a
  className="button-0-1-106"
  href="#"
>
  <span
    className="button_textContainer-0-1-111"
  >
    After slot only
  </span>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": " >",
      }
    }
    slot="after"
  />
</a>
`;

exports[`button snapshots Button: 8 1`] = `
<a
  className="button-0-1-120"
  href="#"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<",
      }
    }
    slot="before"
  />
  <span
    className="button_textContainer-0-1-125"
  >
    Both slots
  </span>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": " >",
      }
    }
    slot="after"
  />
</a>
`;

exports[`button snapshots Button: 9 1`] = `
<a
  className="button-0-1-134"
  href="#"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<",
      }
    }
    slot="before"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<",
      }
    }
    slot="before"
  />
  <span
    className="button_textContainer-0-1-139"
  >
    Mutliple both slots
  </span>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": " >",
      }
    }
    slot="after"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": " >",
      }
    }
    slot="after"
  />
</a>
`;

exports[`button snapshots Button: 10 1`] = `
<button
  className="button-0-1-148 button__disabled-0-1-154"
  data-sketch-symbol="Button - secondary disabled"
  disabled={true}
  href={null}
>
  <span
    className="button_textContainer-0-1-153"
  >
    Secondary button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 11 1`] = `
<button
  className="button-0-1-162 button__disabled-0-1-168 button_primary-0-1-163"
  data-sketch-symbol="Button - primary disabled"
  disabled={true}
  href={null}
>
  <span
    className="button_textContainer-0-1-167"
  >
    Primary button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 12 1`] = `
<button
  className="button-0-1-176 button__disabled-0-1-182 button_outline-0-1-178"
  data-sketch-symbol="Button - outline disabled"
  disabled={true}
  href={null}
>
  <span
    className="button_textContainer-0-1-181"
  >
    Outline button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 13 1`] = `
<button
  className="button-0-1-190 button__disabled-0-1-196 button_lightweight-0-1-193"
  data-sketch-symbol="Button - lightweight disabled"
  disabled={true}
  href={null}
>
  <span
    className="button_textContainer-0-1-195"
  >
    Lightweight button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 14 1`] = `
<button
  className="button-0-1-204 button__disabled-0-1-210 button_justified-0-1-208"
  disabled={true}
  href={null}
>
  <span
    className="button_textContainer-0-1-209"
  >
    Justified button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 15 1`] = `
<a
  aria-disabled={true}
  className="button-0-1-218 button__disabled-0-1-224"
  href="#"
>
  <span
    className="button_textContainer-0-1-223"
  >
    Anchor (disabled)
  </span>
</a>
`;
